SAK-27749 - Wrong translation in Messages when using 'hidden groups' functionality
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@311474 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -518,7 +518,7 @@ pvt_addBcc=A\u00f1adir CCO
 pvt_bccClear=Borrar selecci\u00f3n
 pvt_bccUndisclosed=Destinatario no revelado
 pvt_HiddenRecipients=Destinatarios no revelados
-pvt_hiddenGroupsBccMsg=Para enviar un mensaje a un grupo oculto, debe seleccionar el grupo como un receptor Bcc.
+pvt_hiddenGroupsBccMsg=Para enviar un mensaje a un grupo oculto, debe seleccionar el grupo como un receptor Cco.
 #reply all
 pvt_to_cc=CC
 pvt_replyto=Respondiendo a
