SAK-28064 Forum error in 'Move Threads' when topic is not selected
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@315707 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -816,4 +816,5 @@ optional=(opcional)
 image_size_info=Las im\u00e1genes en las filas est\u00e1n limitadas a 35 x 35 p\u00edxeles. Por favor, optimice su imagen para que sea inferior a 100KB.
 image_size_err=Su imagen es demasiado grande para el espacio de 35 x 35 pixeles. Por favor reduzca su imagen para que ocupe menos de 100KB.
 rank_assign_err=Seleccione tipo de fila
+cdfm_not_selected_topic=Debe elegir el foro y tema al que quiere mover la conversaci\u00F3n.
 
