SAK-28064 Missing key
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@315715 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -848,4 +848,5 @@ rank_assign_individuals_to_assign=Individual(s) to be Assigned Rank
 rank_assign_remove_all=Remove all
 rank_assign_recipients_selected=recipients selected
 rank_assign_button_cancel=Cancel
-rank_assign_button_update=Update Individualscdfm_not_selected_topic=You have to select forum and topic where moving thread
+rank_assign_button_update=Update Individuals
+cdfm_not_selected_topic=You have to select forum and topic where moving thread
