SAK-28192 Update spanish translations in TRUNK up to 100%
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@316128 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -1,4 +1,3 @@
-#X-Generator: crowdin.net
 
 cdfm_add_button=A\u00f1adir ->
 cdfm_remove_button=<- Borrar
@@ -66,7 +65,7 @@ stat_percent_read=Porcentaje le\u00eddo
 stat_forum_title=T\u00edtulo del foro
 stat_forum_word_count=N\u00famero de palabras
 stat_forum_comments=Comentarios
-stat_forum_na=N/A
+stat_forum_na=No Disponible
 stat_forum_comments_hide=Ocultar comentarios
 stat_forum_comments_show=Mostrar comentarios
 stat_forum_comments_hidden=--Oculto--
@@ -148,6 +147,7 @@ cdfm_template_setting=Configurar plantilla
 cdfm_default_template_settings=Configuraci\u00f3n de plantilla predeterminada
 cdfm_default_template_settings_instruction=La configuraci\u00f3n de esta plantilla se aplicar\u00e1 cada vez que se cree un nuevo foro o tema. Puede cambiar esta configuraci\u00f3n para un foro o tema espec\u00edficos despu\u00e9s de haberlos creado.
 cdfm_default_template_organize=Organizar foros y temas
+cdfm_default_template_organize_instruction=
 cdfm_checkall=Seleccionar todo
 cdfm_subject=Asunto
 cdfm_authoredby=Creado por
@@ -525,6 +525,7 @@ pvt_replyto=Respondiendo a
 pvt_from=Desde
 pvt_openb=(
 pvt_closeb=)
+pvt_colon=\:
 pvt_mainpgerror=El \u00e1rea de mensajes no est\u00e1 activada para este sitio. Para activarla para este sitio, haga clic en Configuraci\u00f3n en la barra del \u00e1rea de mensajes.
 pvt_hlprpgerror=La herramienta de mensajes no est\u00e1 activada para este sitio. Para activarla, haga clic en Configuraci\u00f3n.
 pvt_lowercase_msg=mensaje
@@ -776,6 +777,12 @@ hiddenGroups_remove=Borrar
 move_thread=Mover Conversaci\u00f3n(es)
 by_name=Por nombre\:
 in_forum=En el foro\:
+select_forum=- Seleccione Foro -
+move_showing=mostrando
+move_of=de
+move_topics=temas
+move_cancel=Cancelar
+move_move=Mover Conversaci\u00f3n(es) al Tema seleccionado 
 move_thread_info1=Las siguientes conversaciones se mover\u00e1n desde
 move_thread_info2=el tema abajo seleccionado.
 leave_reminder=Dejar el recordatorio sobre el movimiento en el tema antiguo
@@ -816,5 +823,25 @@ optional=(opcional)
 image_size_info=Las im\u00e1genes en las filas est\u00e1n limitadas a 35 x 35 p\u00edxeles. Por favor, optimice su imagen para que sea inferior a 100KB.
 image_size_err=Su imagen es demasiado grande para el espacio de 35 x 35 pixeles. Por favor reduzca su imagen para que ocupe menos de 100KB.
 rank_assign_err=Seleccione tipo de fila
-cdfm_not_selected_topic=Debe elegir el foro y tema al que quiere mover la conversaci\u00F3n.
-
+rank_na=no disponible
+rank_picker_click_add_individuals=Clic en<em style\="font-weight\: bolder;"> A\u00f1adir miembros.</em>
+rank_picker_btn_add_individuals=A\u00f1adir miembros...
+rank_threshold_hint=- Introduce el umbral -
+rank_picker_assign_individuals=Asignar ranking a miembros
+rank_assign_filter_site_members=Filtrar miembros del sitio...
+rank_assign_by_name=Por nombre\:
+rank_assign_in_group=del Grupo/Secci\u00f3n\:
+rank_assign_all_groups=Todas las Secciones/Grupos
+rank_assign_of_role=y rol\:
+rank_assign_all_roles=Todos los roles
+rank_assign_title_site_members=Miembros del sitio
+rank_assign_showing=mostrando
+rank_assign_of=de
+rank_assign_site_members=miembros del sitio
+rank_assign_add_all=A\u00f1adir todos
+rank_assign_individuals_to_assign=Miembro(s) para asignar Ranking
+rank_assign_remove_all=Eliminar todos
+rank_assign_recipients_selected=miembros seleccionados
+rank_assign_button_cancel=Cancelar
+rank_assign_button_update=Actualizar miembros
+cdfm_not_selected_topic=Debe elegir el foro y tema al que quiere mover la conversaci\u00f3n.
